Add redirect for es.publictestwiki.com to publictestwiki.com

--- a/redirects.yaml
+++ b/redirects.yaml
@@ -135,6 +135,12 @@
     sslname: 'publictestwiki.com'
     ca: 'LetsEncrypt'
     disable_event: true
+  espublictestwikicom:
+    url: 'es.publictestwiki.com'
+    redirect: 'publictestwiki.com'
+    sslname: 'publictestwiki.com'
+    ca: 'LetsEncrypt'
+    disable_event: true
   museummiddellandnl:
     url: 'museummiddelland.nl'
     redirect: 'www.museummiddelland.nl'
